--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             
             <nav>
                 <a href = "#home">Home</a>
-                <a href = "/html/quiz.html">Quiz</a>
+                <a href = "/html/quiz">Quiz</a>
                 <a href = "/html/resources.html">Resources</a>
                 <a href = "/html/contact.html">Contact</a>
 
