--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>azteczone</title>
+    <title>aztecs4kids</title>
     <link rel = 'stylesheet' type="text/css" href = "/style/style.css"/>
     <link href='https://fonts.googleapis.com/css?family=Kranky' rel='stylesheet'>
 </head>
@@ -15,8 +15,8 @@
             <nav>
                 <a href = "#home">Home</a>
                 <a href = "/html/quiz">Quiz</a>
-                <a href = "/html/resources.html">Resources</a>
-                <a href = "/html/contact.html">Contact</a>
+                <a href = "/html/resources">Resources</a>
+                <a href = "/html/contact">Contact</a>
 
             </nav>
 
