--- a/html/contact.html
+++ b/html/contact.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Aztec-Contact</title>
+    <title>Aztecs4kids/Contact</title>
     <link rel = 'stylesheet' type = 'text/css' href="/style/style.css"/>
     <link href='https://fonts.googleapis.com/css?family=Kranky' rel='stylesheet'>
 </head>
 <body>
     <section id = 'main-box'>
         <nav>
-            <a href = "/index.html">Home</a>
-            <a href = "/html/quiz.html">Quiz</a>
-            <a href = "/html/resources.html">Resources</a>
+            <a href = "/index">Home</a>
+            <a href = "/html/quiz">Quiz</a>
+            <a href = "/html/resources">Resources</a>
             <a href = "#contact">Contact</a>
         </nav>
 
