--- a/html/quiz.html
+++ b/html/quiz.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Aztec-Quiz</title>
+    <title>aztecs4kids/quiz</title>
     <link rel = 'stylesheet' type = 'text/css' href="/style/style.css" />
     <link href='https://fonts.googleapis.com/css?family=Kranky' rel='stylesheet'>
 
@@ -14,10 +14,10 @@
     <section class = 'main-box' id = 'main-box'>
 
         <nav>
-            <a href = "/index.html">Home</a>
+            <a href = "/index">Home</a>
             <a href = "#quiz">Quiz</a>
-            <a href = "/html/resources.html">Resources</a>
-            <a href = "/html/contact.html">Contact</a>
+            <a href = "/html/resources">Resources</a>
+            <a href = "/html/contact">Contact</a>
     
         </nav>
 
