--- a/html/resources.html
+++ b/html/resources.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Aztec-Resources</title>
+    <title>aztecs4kids/Resources</title>
     <link rel = 'stylesheet' type = 'text/css' href="/style/style.css" >
     <link href='https://fonts.googleapis.com/css?family=Kranky' rel='stylesheet'>
 </head>
@@ -12,10 +12,10 @@
 
     <section id = 'main-box'>
         <nav>
-            <a href = "/index.html">Home</a>
-            <a href = "/html/quiz.html">Quiz</a>
+            <a href = "/index">Home</a>
+            <a href = "/html/quiz">Quiz</a>
             <a href = "#resources">Resources</a>
-            <a href = "/html/contact.html">Contact</a>
+            <a href = "/html/contact">Contact</a>
         </nav>
 
         <header class = 'main-title'>
