--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
             
             <nav>
                 <a href = "#home">Home</a>
-                <a href = "/html/quiz">Quiz</a>
-                <a href = "/html/resources">Resources</a>
-                <a href = "/html/contact">Contact</a>
+                <a href = "/quiz">Quiz</a>
+                <a href = "/resources">Resources</a>
+                <a href = "/contact">Contact</a>
 
             </nav>
 
