--- a/quiz.html
+++ b/quiz.html
@@ -16,8 +16,8 @@
         <nav>
             <a href = "/index">Home</a>
             <a href = "#quiz">Quiz</a>
-            <a href = "/html/resources">Resources</a>
-            <a href = "/html/contact">Contact</a>
+            <a href = "/resources">Resources</a>
+            <a href = "/contact">Contact</a>
     
         </nav>
 
