--- a/contact.html
+++ b/contact.html
@@ -12,8 +12,8 @@
     <section id = 'main-box'>
         <nav>
             <a href = "/index">Home</a>
-            <a href = "/html/quiz">Quiz</a>
-            <a href = "/html/resources">Resources</a>
+            <a href = "/quiz">Quiz</a>
+            <a href = "/resources">Resources</a>
             <a href = "#contact">Contact</a>
         </nav>
 
