--- a/resources.html
+++ b/resources.html
@@ -13,9 +13,9 @@
     <section id = 'main-box'>
         <nav>
             <a href = "/index">Home</a>
-            <a href = "/html/quiz">Quiz</a>
+            <a href = "/quiz">Quiz</a>
             <a href = "#resources">Resources</a>
-            <a href = "/html/contact">Contact</a>
+            <a href = "/contact">Contact</a>
         </nav>
 
         <header class = 'main-title'>
