--- a/index.html
+++ b/index.html
@@ -28,9 +28,11 @@
 
             <article class = 'main-cats'>
                 <section class = 'cat-img'>
-                    <img src = '/images/slideshow/cat1.png' alt = 'cat1' class = 'cat' />
-                    <img src = '/images/slideshow/cat2.png' alt = 'cat2' class = 'cat' />
-                    <img src = '/images/slideshow/cat3.png' alt = 'cat3' class = 'cat' />
+                    <img src = '/images/slideshow/class1.jpg' alt = 'classpic' class = 'cat' />
+                    <img src = '/images/slideshow/class2.jpg' alt = 'classpic' class = 'cat' />
+                    <img src = '/images/slideshow/class3.jpg' alt = 'classpic' class = 'cat' />
+                    <img src = '/images/slideshow/class4.jpg' alt = 'classpic' class = 'cat' />
+                    <img src = '/images/slideshow/class5.jpg' alt = 'classpic' class = 'cat' />
                 </section>
             </article>
 
