--- a/resources.html
+++ b/resources.html
@@ -36,7 +36,7 @@
                         <ul> <h3>Math</h3>
                             <li>Imagina Matemáticas/Imagine Math: <a class = "resource-links"  href="https://lms.thinkthroughmath.com/users/sign_in">Click Here</a></li>
                             <li>Multiplication/Multiplicacion: <a  class = "resource-links" href = "https://bigbrainz.com/login/"> Click Here</a>  </li>
-                            <li>Imagine Math: <a class = "resource-links" href="https://lms.thinkthroughmath.com/users/sign_in">Click Here</a></li>
+                            <li>Big Brainz: <a class = "resource-links" href="https://bigbrainz.com/login/">Click Here</a></li>
                             <li>Math Magician: <a class = "resource-links" href = "http://coolsciencelab.com/math_magician">Click Here</a></li>
                             <li> Math trainer: <a class = "resource-links" href = "https://www.mathsisfun.com/numbers/math-trainer-multiply.html">Click Here</a> </li>
                             <li>Prodigy: <a class = "resource-links" href="https://www.prodigygame.com/">Click Here</a></li>
